--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "babel-loader": "^8.2.3",
     "three": "^0.130.1",
     "three-gltf-loader": "^1.111.0",
     "three-orbitcontrols": "^2.110.3",
